Fix card title on firefox

--- a/block.scss
+++ b/block.scss
@@ -85,19 +85,28 @@ header {
   .cards__container {
     grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
     gap: 1rem;
-    a {
-      position: relative;
-      color: var(--color-main);
-      font-family: var(--font-second);
-      font-size: var(--font-size-medium);
-      font-weight: var(--font-weight-300);
-      .card__title {
-        padding: 1rem;
-        position: absolute;
-        bottom: 1rem;
-        left: 1rem;
-      }
+    .card{
+        position: relative; 
+        a {
+            position: relative;
+            display: block;
+            color: var(--color-main);
+            font-family: var(--font-second);
+            font-size: var(--font-size-medium);
+            font-weight: var(--font-weight-300);
+      
+            img{
+              width: 100%;
+              height: auto;
+            }
+            .card__title {
+              position: absolute;
+              bottom: 0;
+              padding: 10px;
+            }
+          }
     }
+
   }
   .seeall_mobile{
     display: none;
@@ -137,7 +146,7 @@ footer {
   background-color: var(--color-second);
 }
 
-@media (width < 750px) {
+@media (max-width: 750px) {
   .mobile {
     display: block;
   }
