--- a/style.css
+++ b/style.css
@@ -211,18 +211,25 @@ header .quote {
   grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
   gap: 1rem;
 }
-.cards .cards__container a {
+.cards .cards__container .card {
   position: relative;
+}
+.cards .cards__container .card a {
+  position: relative;
+  display: block;
   color: var(--color-main);
   font-family: var(--font-second);
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-300);
 }
-.cards .cards__container a .card__title {
-  padding: 1rem;
+.cards .cards__container .card a img {
+  width: 100%;
+  height: auto;
+}
+.cards .cards__container .card a .card__title {
   position: absolute;
-  bottom: 1rem;
-  left: 1rem;
+  bottom: 0;
+  padding: 10px;
 }
 .cards .seeall_mobile {
   display: none;
@@ -254,7 +261,7 @@ footer {
   background-color: var(--color-second);
 }
 
-@media (width < 750px) {
+@media (max-width: 750px) {
   .mobile {
     display: block;
   }
